INTYGFV-14370: Updated IText version.